--- a/JKQScreenshotsToolMod.csproj
+++ b/JKQScreenshotsToolMod.csproj
@@ -80,6 +80,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\ColorChannels.cs" />
     <Compile Include="Structs\InventoryCameraParams.cs" />
     <Compile Include="Helpers\InventoryHelper.cs" />
     <Compile Include="ToolCanvas\ToolMenuHeaderView.cs" />
